widgets/vis-inventwo/css/style.css
/* Style your widget here */

.vis-widget {
    -webkit-tap-highlight-color: transparent;
}

/* BUTTONS ANFANG */

.vis-inventwo-button {
    box-shadow: 2px 2px 2px 1px #111111;
    position: absolute;
    width: 100%;
    height: 100%;
}

.vis-inventwo-button-new {
    position: absolute;
    width: 100%;
    height: 100%;
}

.vis-inventwo-button-imageContainer {
    text-align: center;
    position:relative;
    z-index: 1;
}

.vis-inventwo-button-text {
    position: relative;
    align-self: flex-start;
    width: 100%;
    margin-top: auto;
    z-index: 1;
}

.vis-inventwo-button-content{
    /*padding: 7px;*/
    position: absolute;
    top: 7px;
    left: 7px;
    right: 7px;
    bottom: 7px;
    display: flex;
    flex-direction: column;
}

.vis-inventwo-button-content-small{
    /*padding: 7px;*/
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: absolute;
    top: 7px;
    left: 7px;
    right: 7px;
    bottom: 7px;
}
/* BUTTONS ENDE */

.vis-inventwo-json-table{
    border-spacing: 0px;
    width: 100%;
}

.vis-inventwo-json-table-fixedheader th{
    position: sticky;
    top: 0;
}

.vis-inventwo-json-table th, .vis-inventwo-json-table td{
    padding-left: 5px;
    padding-right: 5px;
}
.vis-inventwo-radiobtnlist-body{
    display: flex;
}

.iUniversalWidgetRefreshBtn{
    background: #9fdb58;
    border-radius: 0 2px;
    color: white;
    padding: 8px;
    width: 100%;
    border: 1px dashed black;
}
.iUniversalWidgetRefreshBtn:hover{
    background: #b6f171;
    border: 1px dashed #848484;
}
.iUniversalWidgetRefreshBtn:active{
    background: #6c6c6c;
    border: 1px dashed #848484;
}

@keyframes blink{
    0%{		opacity: 1;	}

    50%{	opacity: 0;	}

    100%{	opacity: 1;	}
}

.vis-inventwo-valuelist-list{
    margin: 0;
    word-break: break-word;
}

.vis-inventwo-overlay{
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

.vis-inventwo-json-table .vis-inventwo-json-table-checkbox-container {
    display: inline-flex;
    position: relative;
    font-size: 22px;
}
.vis-inventwo-json-table .vis-inventwo-json-table-checkbox-container .vis-inventwo-json-table-checkbox-checkmark {
    height: 25px;
    width: 25px;
}

.vis-inventwo-json-table .vis-inventwo-json-table-checkbox-container .vis-inventwo-json-table-checkbox-checkmark:after {
    content: "";
    position: absolute;
    left: 9px;
    top: 5px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    display: none;
}

.vis-inventwo-json-table .vis-inventwo-json-table-checkbox-container.checked .vis-inventwo-json-table-checkbox-checkmark:after{
    display: block;
}

.vis-inventwo-img{
    height: auto;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}

.vis-inventwo-modal{
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    z-index: 10000;
    top: 0;
    left: 0;
    display: flex;
}

.vis-inventwo-modal .vis-inventwo-modal-window{
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.vis-inventwo-modal .vis-inventwo-modal-window .vis-inventwo-modal-content{
    width: 100%;
    flex: 1 0 auto;
    position: relative;
    overflow: hidden;
}

.vis-inventwo-modal .vis-inventwo-modal-window .vis-inventwo-modal-titlebar{
    position: relative;
    padding: 5px 5px 5px 10px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.vis-inventwo-modal .vis-inventwo-modal-window .vis-inventwo-modal-title{
    font-weight: bold;
}

.vis-inventwo-modal .vis-inventwo-modal-window .vis-inventwo-modal-closebtn{
    width: 35px;
    height: 100%;
    font-weight: bold;
    border-radius: 5px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.vis-inventwo-grid-view{
    display: grid !important;
    overflow: hidden !important;
    min-width: unset !important;
    min-height: unset !important;
}

.vis-inventwo-grid-element{
    position: relative !important;
    top: 0 !important;
    left: 0 !important;
}

.vis-inventwo-clock-analog{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part img,
.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part,
.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part svg{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part.vis-inventwo-clock-analog-face-border,
.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part.vis-inventwo-clock-analog-hand-hour,
.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part.vis-inventwo-clock-analog-hand-minute,
.vis-inventwo-clock-analog .vis-inventwo-clock-analog-part.vis-inventwo-clock-analog-hand-second{
    position: absolute;
}

.vis-inventwo-switch-basic{
    display: flex;
}

.vis-inventwo-switch-basic .vis-inventwo-switch-basic-wrapper{
    display: flex;
    align-items: center;
    justify-content: center;
}

.vis-inventwo-switch-basic .vis-inventwo-switch-basic-wrapper .vis-inventwo-switch-basic-knob{
    position: absolute;
    transition: 0.5s;
}

.vis-inventwo-checkbox{
    display: flex;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box-container{
    display: flex;
    align-items: center;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.2s;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box:after{
    content: "";
    position: absolute;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box.iIconCheck:after{
    border-top: 0;
    border-left: 0;
    border-color: var(--check-color);
    width: 25%;
    height: 50%;
    border-style: solid;
    transform: rotateZ(
            45deg
    );
    margin-bottom: 20%;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box.iIconDot:after{
    width: 50%;
    height: 50%;
    background: var(--check-color);
    border-radius: 100%;
}

.vis-inventwo-checkbox .vis-inventwo-checkbox-box.iIconCross:after{
    content: "x";
    color: var(--check-color);
    font-weight: bold;
}

.vis-inventwo-grid{
    display: grid;
    z-index: 0;
}

.vis-inventwo-grid.show-grid{
    border: 1px dashed red;
}

/*.vis-inventwo-grid.show-grid .grid-pseudo-element{
    border: 1px dashed red;
}*/

.vis-inventwo-universal-widget,
.vis-inventwo-multi-widget{
    z-index: 1;
}

/*.vis-widget.is-grid-child{*/
/*    position: relative !important;*/
/*    left: 0 !important;*/
/*    top: 0 !important;*/
/*}*/

.vis-inventwo-slider .vis-inventwo-slider-step-label {
    position: absolute;
    text-align: center;
    box-shadow: unset !important;
}

.vis-inventwo-slider.slider-horizontal .vis-inventwo-slider-step-label {
    transform: translateX(-50%);
}

.vis-inventwo-slider.slider-vertical .vis-inventwo-slider-step-label {
    transform: translateY(-50%);
}

.vis-inventwo-slider .ui-widget-content{
    color: unset !important;
}

.vis-inventwo-slider .ui-widget{
    font-size: unset;
}

